ml-models/v3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamlit-car-v1
  namespace: ml-model
  labels:
    app: streamlit-car-v1
spec:
  selector:
    matchLabels:
      app: streamlit-car-v1
  replicas: 1
  template:
    metadata:
      labels:
        app: streamlit-car-v1
    spec:
      containers:
      - name: streamlit-car-v1
        image: quay.io/sam_paisley/fringe:streamlit-car-v1
        ports:
        - containerPort: 2085
