ml-models/v3/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamlit-cow-v1
  namespace: ml-model
spec:
  selector:
    app: streamlit-cow-v1
  ports:
  - port: 2085
  type: NodePort
