ml-models/v3/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: streamlit-car-v1
  namespace: ml-model
spec:
  to:
    kind: Service
    name: streamlit-car-v1
    weight: 100
  port:
    targetPort: 2085
  wildcardPolicy: None
